@@ -104,7 +104,7 @@ static int cname##_cfb_cipher(EVP_CIPHER_CTX *ctx, unsigned char *out, const uns
 #define BLOCK_CIPHER_defs(cname, kstruct, \
 				nid, block_size, key_len, iv_len, flags,\
 				 init_key, cleanup, set_asn1, get_asn1, ctrl)\
-static EVP_CIPHER cname##_cbc = {\
+static const EVP_CIPHER cname##_cbc = {\
 	nid##_cbc, block_size, key_len, iv_len, \
 	flags | EVP_CIPH_CBC_MODE,\
 	init_key,\
@@ -116,8 +116,8 @@ static EVP_CIPHER cname##_cbc = {\
 	ctrl, \
 	NULL \
 };\
-EVP_CIPHER *EVP_##cname##_cbc(void) { return &cname##_cbc; }\
-static EVP_CIPHER cname##_cfb = {\
+const EVP_CIPHER *EVP_##cname##_cbc(void) { return &cname##_cbc; }\
+static const EVP_CIPHER cname##_cfb = {\
 	nid##_cfb64, 1, key_len, iv_len, \
 	flags | EVP_CIPH_CFB_MODE,\
 	init_key,\
@@ -129,8 +129,8 @@ static EVP_CIPHER cname##_cfb = {\
 	ctrl,\
 	NULL \
 };\
-EVP_CIPHER *EVP_##cname##_cfb(void) { return &cname##_cfb; }\
-static EVP_CIPHER cname##_ofb = {\
+const EVP_CIPHER *EVP_##cname##_cfb(void) { return &cname##_cfb; }\
+static const EVP_CIPHER cname##_ofb = {\
 	nid##_ofb64, 1, key_len, iv_len, \
 	flags | EVP_CIPH_OFB_MODE,\
 	init_key,\
@@ -142,8 +142,8 @@ static EVP_CIPHER cname##_ofb = {\
 	ctrl,\
 	NULL \
 };\
-EVP_CIPHER *EVP_##cname##_ofb(void) { return &cname##_ofb; }\
-static EVP_CIPHER cname##_ecb = {\
+const EVP_CIPHER *EVP_##cname##_ofb(void) { return &cname##_ofb; }\
+static const EVP_CIPHER cname##_ecb = {\
 	nid##_ecb, block_size, key_len, iv_len, \
 	flags | EVP_CIPH_ECB_MODE,\
 	init_key,\
@@ -155,7 +155,7 @@ static EVP_CIPHER cname##_ecb = {\
 	ctrl,\
 	NULL \
 };\
-EVP_CIPHER *EVP_##cname##_ecb(void) { return &cname##_ecb; }
+const EVP_CIPHER *EVP_##cname##_ecb(void) { return &cname##_ecb; }
 
 
 
